welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: '=' expected but ';' found.
	while (!F)
^ColumnByColumn:12: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:15: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:18: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:21: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:24: error: Unmatched closing brace '}' ignored here
}
^