welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	var cpt+=1
	while (!F)
		for (x<-0 to getMondeHauteur()-1) {
			ecritMessage()
			setPos(x+1,y+1)
		}
	}
}
